updated funingo site pushing

--- a/funingo-main/src/components/booknow/styles.scss
+++ b/funingo-main/src/components/booknow/styles.scss
@@ -132,7 +132,8 @@
           // border:2px solid red;
         }
         .input-funingo{
-          height:2.3rem
+          height:2.3rem;
+          border-radius: 5px;
         }
 
         .input-weekday {
