--- a/funingo-main/src/components/booknow/styles.scss
+++ b/funingo-main/src/components/booknow/styles.scss
@@ -118,7 +118,7 @@
           display: flex;
           flex-direction: column;
           width: 100%;
-          z-index: 10;
+          z-index:10;
         }
         .input-freebies {
           display: flex;
@@ -134,6 +134,7 @@
         .input-funingo{
           height:2.3rem;
           border-radius: 5px;
+          // border:2px solid red;
         }
 
         .input-weekday {
