zone, event, navbar update

--- a/funingo-main/src/components/hover/first.scss
+++ b/funingo-main/src/components/hover/first.scss
@@ -51,13 +51,15 @@
       text-align: left;
       letter-spacing: 0.045em;
       margin-left: 2rem;
+      margin-top: 1rem;
       
     }
 
     .sub2 {
-      margin-bottom: 1rem;
+      // margin-bottom: 1rem;
       color: #fff;
       font-family: Saira;
+      // font-size: 10px;
       text-align: left;
     }
   }
