--- a/funingo-main/src/components/booknow/styles.scss
+++ b/funingo-main/src/components/booknow/styles.scss
@@ -35,6 +35,7 @@
 
       .book-now-label {
         margin-bottom: 5px;
+        color: white;
       }
 
       .form-heading {
@@ -61,7 +62,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        color: white;
+        color: black;
 
         @media (max-width: 900px) {
           width: 90%;
