--- a/funingo-main/src/components/booknow/styles.scss
+++ b/funingo-main/src/components/booknow/styles.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -14,15 +16,61 @@
   .top2 {
     background: url("./images/booknowbgimg.png") center/cover;
     // height: 150vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // margin-bottom: 0px;
+
+    .bukForm {
+      display: flex;
+      flex-direction: column;
+      height: 1000px; /* Adjust height as needed */
+      width: 30%;
+      box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.689);
+      border: 1px solid transparent;
+      border-radius: 10px;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 50px;
+      margin-bottom: 50px;
+      overflow-y: scroll; /* Add scroll */
+      font-family: "Saira", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 600;
+    }
+
+    .bukForm::-webkit-scrollbar {
+      width: 16px;
+    }
+
+    .bukForm::-webkit-scrollbar-track {
+      background: #fbffd1;
+      border-radius: 0px 10px 10px 0px;
+      padding: 2px;
+    }
+
+    .bukForm::-webkit-scrollbar-thumb {
+      background: linear-gradient(45deg, #040000, #000000);
+      border-radius: 10px;
+      border: 4px solid transparent; /* Add a transparent border to increase the visual width of the thumb */
+      background-clip: content-box;
+    }
+
+    .bukForm::-webkit-scrollbar-corner {
+      background: transparent;
+    }
+
+    .bg-yellow-200 {
+      background-color: #fff504;
+    }
+
+    .bg-red-200 {
+      background-color: #fffb92;
+    }
 
     .book-form {
       display: flex;
       flex-direction: column;
-      height: 90%;
       width: 50%;
       border: 2px solid white;
       justify-content: space-between;
@@ -118,7 +166,7 @@
           display: flex;
           flex-direction: column;
           width: 100%;
-          z-index:10;
+          z-index: 10;
         }
         .input-freebies {
           display: flex;
@@ -131,8 +179,8 @@
           width: 100%;
           // border:2px solid red;
         }
-        .input-funingo{
-          height:2.3rem;
+        .input-funingo {
+          height: 2.3rem;
           border-radius: 5px;
           // border:2px solid red;
         }
