--- a/funingo-main/src/components/home/styles.scss
+++ b/funingo-main/src/components/home/styles.scss
@@ -8,7 +8,7 @@
     align-items: center;
     position: relative;
     overflow: hidden;
-    margin-top: 10%;
+    margin-top: 0%;
     height: 100%;
     padding: 150px 20px;
 
@@ -107,10 +107,10 @@
         font-weight: 400;
         text-align: center;
         letter-spacing: 0.075em;
-        color: #fff;
+        color: #2368ff;
 
         @media (max-width: 441px) {
-          font-size: 33px;
+          font-size: 43px;
           letter-spacing: 4px;
         }
       }
