--- a/funingo-main/src/components/navbar/styles.scss
+++ b/funingo-main/src/components/navbar/styles.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
 // .nav {
 //   .expanded-nav {
 //     position: absolute;
@@ -6,7 +8,7 @@
 //     transition: all 1.5s;
 //     overflow: hidden;
 //     border-radius: 0px 0px 5px 5px;
-   
+
 //     .action-btns {
 //       background-color: white;
 //       display: flex;
@@ -15,8 +17,11 @@
 //   }
 // }
 
-
 .nav {
+  background-color: transparent;
+  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.245);
+  backdrop-filter: blur(15px);
+
   .nav-container {
     position: absolute;
     width: 70vw;
@@ -30,6 +35,13 @@
       display: flex;
       flex-direction: column;
     }
+  }
+
+  .navText {
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    font-style: normal;
   }
 
   .expanded-nav {
