--- a/funingo-main/src/components/navbar/styles.scss
+++ b/funingo-main/src/components/navbar/styles.scss
@@ -18,9 +18,7 @@
 // }
 
 .nav {
-  background-color: transparent;
-  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.245);
-  backdrop-filter: blur(15px);
+  background-color: white;
 
   .nav-container {
     position: absolute;
