little changes related to home page and navbar

--- a/funingo-main/src/components/home/carousel.scss
+++ b/funingo-main/src/components/home/carousel.scss
@@ -27,11 +27,16 @@
         width: 48%;
       }
 
+      .heading{
+        font-size: 2.5rem;
+        color: #2474d2;
+      }
+
       .subheading {
         text-align: center;
         color: #474747;
         font-family: Saira;
-        font-size: 34.831px;
+        font-size: 17.831px;
         font-style: normal;
         font-weight: 500;
         line-height: 1;
