--- a/funingo-main/src/components/home/styles.scss
+++ b/funingo-main/src/components/home/styles.scss
@@ -16,8 +16,9 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      height: 100%;
-      min-width: 100vw;
+      height: 120%;
+      // padding: 10%;
+      min-width: 100%;
       transform: translate(-50%, -50%);
       z-index: -1;
       overflow: hidden;
@@ -110,7 +111,7 @@
         color: #2368ff;
 
         @media (max-width: 441px) {
-          font-size: 43px;
+          font-size: 33px;
           letter-spacing: 4px;
         }
       }
