--- a/funingo-main/src/components/hover/first.scss
+++ b/funingo-main/src/components/hover/first.scss
@@ -8,6 +8,14 @@
   display: flex;
   flex-direction: row;
   // width: 100%;
+
+  .event-hover-image {
+    @apply w-[500px] h-[300px];
+  }
+
+  .zone-hover-image {
+    @apply w-[450px];
+  }
  
 
 
@@ -47,7 +55,7 @@
       color: #fff;
       font-family: Saira;
       font-size: 21px;
-      font-weight: 700;
+      font-weight: 500;
       text-align: left;
       letter-spacing: 0.045em;
       margin-left: 2rem;
