--- a/funingo-main/src/components/hover/first.scss
+++ b/funingo-main/src/components/hover/first.scss
@@ -9,13 +9,13 @@
   flex-direction: row;
   // width: 100%;
 
-  .event-hover-image {
-    @apply w-[500px] h-[300px];
-  }
+  // .event-hover-image {
+  //   @apply w-[500px] h-[300px];
+  // }
 
-  .zone-hover-image {
-    @apply w-[450px];
-  }
+  // .zone-hover-image {
+  //   @apply w-[450px];
+  // }
  
 
 
