--- a/funingo-main/src/components/hover/first.scss
+++ b/funingo-main/src/components/hover/first.scss
@@ -7,41 +7,24 @@
   background-color: #2474d2;
   display: flex;
   flex-direction: row;
-  // width: 100%;
 
-  // .event-hover-image {
-  //   @apply w-[500px] h-[300px];
-  // }
+  .event-hover-image {
+    @apply w-[500px] h-[300px];
+  }
 
-  // .zone-hover-image {
-  //   @apply w-[450px];
-  // }
- 
-
+  .zone-hover-image {
+    @apply w-[450px];
+  }
 
   img {
     display: block;
     height: 17rem;
     width: 20rem;
     padding: 2rem;
-
-    // @media (max-width: 700px) {
-    //   width: 25rem;
-    //   height: 15rem;
-    // }
-    // @media (max-width: 475px) {
-    //   width: 15rem;
-    //   height: 15rem;
-    // }
-    // @media (max-width: 364px) {
-    //   width: 10rem;
-    //   height: 10rem;
-    // }
   }
 
   .zone-hover {
     padding: 2rem;
-  
 
     @media (max-width: 1300px) {
       width: 30vw;
@@ -60,14 +43,11 @@
       letter-spacing: 0.045em;
       margin-left: 2rem;
       margin-top: 1rem;
-      
     }
 
     .sub2 {
-      // margin-bottom: 1rem;
       color: #fff;
       font-family: Saira;
-      // font-size: 10px;
       text-align: left;
     }
   }
@@ -78,7 +58,6 @@
       width: 12rem;
       display: block;
       margin: auto;
-
     }
     .sub2 {
       width: 14rem;
