--- a/funingo-main/src/components/booknow/styles.scss
+++ b/funingo-main/src/components/booknow/styles.scss
@@ -5,6 +5,15 @@
   padding: 0;
 }
 
+.blur {
+  filter: blur(5px);
+  pointer-events: none;
+}
+
+.view-activity-button {
+  z-index: 1000;
+  position: relative;
+}
 
 
 .booknow {
@@ -20,6 +29,11 @@
       background-size: cover;
       background-repeat: no-repeat;
       
+    }
+    @media (max-width: 600px) {
+      .top{
+        padding: 20px;
+      }
     }
   }
 
@@ -332,8 +346,8 @@
     align-items: center;
 
     @media (max-width: 600px) {
-      font-size: 36px;
-      font-weight: 400;
+      font-size: 25px;
+      font-weight: 700;
     }
   }
 }
