--- a/funingo-main/src/components/home-carousel/styles.scss
+++ b/funingo-main/src/components/home-carousel/styles.scss
@@ -12,13 +12,13 @@
     font-size: 60px;
     line-height: 60px;
   }
-  @media (max-width: 563px) {
+  @media (max-width: 881px) {
     text-align: left;
     font-size: 30px;
     line-height: 30px;
   }
   @media (max-width: 441px) {
-    font-size: 29px;
+    font-size: 15px;
     line-height: 30px;
   }
 }
@@ -36,60 +36,67 @@
     line-height: 60px;
   }
   @media (max-width: 881px) {
-    font-size: 50px;
+    font-size: 30px;
     line-height: 50px;
     // bottom: 20%;
   }
   @media (max-width: 441px) {
-    font-size: 33px;
-    line-height: 33px;
+    font-size: 18px;
+    line-height: 13px;
     // bottom: 33%;
     // margin-left: -4rem;
   }
 }
 
-.car-bottom-btn {
+.car-bottom-wrapper {
   position: absolute;
-  bottom: 25%;
+  bottom: 20%;
   right: 100px;
+  
+  align-items: center; /* Ensure children are centered horizontally */
 
   @media (max-width: 752px) {
-    right: 50%;
-    transform: translateX(50%);
+    right: 3%;
+    // transform: translateX(50%);
+    bottom: 20%; /* Adjust bottom position for smaller screens */
   }
 
-  .car-bottom-botton {
-    background-color: #e1dc3e;
-    height: 100px;
-    width: 270px;
+  .car-bottom-btn {
+    background-color: transparent;
+    position: relative;
 
-    @media (max-width: 1015px) {
-      height: 50px;
-      width: 250px;
+    .car-bottom-button {
+      height: 100px;
+      width: 270px;
+
+      @media (max-width: 1015px) {
+        height: 50px;
+        width: 250px;
+      }
+
+      @media (max-width: 752px) {
+        height: 25px;
+        width: 110px;
+        font-size: 18px;
+      }
     }
+  }
+
+  .car-bottom-refer {
+    position: relative;
+    margin-top: 10px; /* Space between button and text */
+    z-index: 1;
+    color: white;
+    font-family: Saira;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 23px;
+    text-align: center;
 
     @media (max-width: 752px) {
-      margin-bottom: -2rem;
-      height: 40px;
-      width: 150px;
-      font-size: 18px;
+      font-size: 5px;
+      line-height: 6px;
     }
   }
 }
-.car-bottom-refer {
-  position: absolute;
-  bottom: 19%;
-  right: 120px;
-  z-index: 1;
-  color: white;
-  font-family: Saira;
-  font-size: 22px;
-  font-weight: 600;
-  line-height: 26px;
-  letter-spacing: 0em;
-  text-align: center;
 
-  @media (max-width: 1015px) {
-    display: none;
-  }
-}
