my final changes saving

--- a/funingo-main/src/components/home/carousel.scss
+++ b/funingo-main/src/components/home/carousel.scss
@@ -29,9 +29,19 @@
 
       .subheading {
         text-align: center;
-        color: #474747;
+        color: #0590c2;
         font-family: Saira;
-        font-size: 34.831px;
+        font-size: 36.831px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1;
+        margin: 10px auto;
+      }
+      .subheading2 {
+        text-align: center;
+        color: #2c2c2c;
+        font-family: Saira;
+        font-size: 20.831px;
         font-style: normal;
         font-weight: 500;
         line-height: 1;
